Bug 261671 - Spectrum Wavelengths in Angstrom, not Nanometres
Summary: Spectrum Wavelengths in Angstrom, not Nanometres
Status: RESOLVED FIXED
Alias: None
Product: kalzium
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: Kalzium Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-31 00:11 UTC by Marius Harmse
Modified: 2011-04-22 16:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marius Harmse 2010-12-31 00:11:48 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Spectrum dialogue shows three tabs: "Settings", "Selected Peaks", and "List of All Peaks".

Under "Settings" the values are indicated in "nm" (Nanometre) - which is not absolutely correct.

Under "List of All Peaks", a list of a few common peaks are indicated, but they are given in Angstrom, not Nanometres.  The peaks are also reported in Air, not Vacuum (to be disambiguoused).

10 Angstrom = 1 nm
Angstrom is not an SI unit

Reproducible: Always




OS: Linux (i686) release 2.6.35-24-generic
Compiler: cc
Comment 1 Etienne 2011-01-01 11:37:41 UTC
Happy new year;)

That was bugging me too. A long time ago kalzium had the peaks in nm. At some point the spectrum information in elements.xml was changed (or introduced?) to Angstrom.
The issue was fixed in the 4.6 branch, so that all is shown in angstrom.

Maybe, a setting for the lenght units will find his way in 4.7...

Etienne
Comment 2 Etienne 2011-04-22 16:46:25 UTC
Git commit a8afae0c20de5701e39fe929974ee99bc61cca39 by Etienne Rebetez.
Committed on 22/04/2011 at 16:52.
Pushed by erebetez into branch 'master'.

add unit and spectrum type settings.
spectrum wavelength units can now be nanometers or angstroms.
fix AbsorptionSpectrum colors.

BUG: 261671

M  +12   -0    src/kalzium.kcfg     
M  +77   -43   src/spectrumview.ui     
M  +36   -14   src/spectrumviewimpl.cpp     
M  +2    -0    src/spectrumviewimpl.h     
M  +30   -30   src/spectrumwidget.cpp     
M  +10   -14   src/spectrumwidget.h     

http://commits.kde.org/kalzium/a8afae0c20de5701e39fe929974ee99bc61cca39