add unit and spectrum type settings. spectrum wavelength units can now be nanometers or angstroms. fix AbsorptionSpectrum colors.

BUG: 261671