src/spectrumwidget.cpp
@@ -55,8 +55,7 @@ SpectrumWidget::SpectrumWidget( QWidget *parent )
     m_gamma = 0.8;
     m_intensityMax = 255;
 
-    setType( EmissionSpectrum );
-//     setType( AbsorptionSpectrum );
+    setType( Prefs::spectrumType() );
 
     setMinimumSize( 400, 230 );
     setSizePolicy( QSizePolicy::Expanding, QSizePolicy::Expanding );
@@ -112,24 +111,21 @@ void SpectrumWidget::paintBands( QPainter* p )
 
     int i = 0;
     int x = 0;
-    int temp = 0;
     double currentWavelength;
 
     foreach ( Spectrum::peak * peak , m_spectrum->peaklist() )
     {
-        currentWavelength = peak->wavelengthToUnit( KUnitConversion::Nanometer );
+        currentWavelength = peak->wavelengthToUnit( Prefs::spectrumWavelengthUnit() );
 
         if ( currentWavelength < m_startValue || currentWavelength > m_endValue )
             continue;
 
         x = xPos( currentWavelength );
 
-        temp = 0;
-
         switch ( m_type )
         {
         case EmissionSpectrum:
-            p->setPen( wavelengthToRGB( peak ) );
+            p->setPen( wavelengthToRGB( currentWavelength ) );
             p->drawLine( x,0,x, m_realHeight-1 );
 
             p->setPen( Qt::black );
@@ -146,64 +142,61 @@ void SpectrumWidget::paintBands( QPainter* p )
     }
 }
 
-QColor SpectrumWidget::wavelengthToRGB( Spectrum::peak * peak )
-{
-    double wavelength = peak->wavelengthToUnit( KUnitConversion::Nanometer );
-
-    return wavelengthToRGB( wavelength );
-}
-
 QColor SpectrumWidget::wavelengthToRGB( double wavelength  )
 {
     double blue = 0.0, green = 0.0, red = 0.0, factor = 0.0;
+
+    // wavelengthTo RGB functin works with nanometers.
+    wavelength = KUnitConversion::Value( wavelength, Prefs::spectrumWavelengthUnit() )
+                 .convertTo( KUnitConversion::Nanometer ).number();
 
     int wavelength_ = ( int ) floor( wavelength );
 
     if ( wavelength_ < 380 || wavelength_ > 780 ) {
         return QColor(Qt::white);
     }
-    else if ( wavelength_ > 380 && wavelength_ < 439 )
+    else if ( wavelength_ >= 380 && wavelength_ < 440 )
     {
         red = -( wavelength-440 ) / ( 440-380 );
         green = 0.0;
         blue = 1.0;
     }
-    else if ( wavelength_ > 440 && wavelength_ < 489 )
+    else if ( wavelength_ >= 440 && wavelength_ < 490 )
     {
         red = 0.0;
         green = ( wavelength-440 ) / ( 490-440 );
         blue = 1.0;
     }
-    else if ( wavelength_ > 490 && wavelength_ < 509 )
+    else if ( wavelength_ >= 490 && wavelength_ < 510 )
     {
         red = 0.0;
         green = 1.0;
         blue = -( wavelength-510 ) / ( 510-490 );
     }
-    else if ( wavelength_ > 510 && wavelength_ < 579 )
+    else if ( wavelength_ >= 510 && wavelength_ < 580 )
     {
         red = ( wavelength-510 ) / ( 580-510 );
         green = 1.0;
         blue = 0.0;
     }
-    else if ( wavelength_ > 580 && wavelength_ < 644 )
+    else if ( wavelength_ >= 580 && wavelength_ < 645 )
     {
         red = 1.0;
         green = -( wavelength-645 ) / ( 645-580 );
         blue = 0.0;
     }
-    else if ( wavelength_ > 645 && wavelength_ < 780 )
+    else if ( wavelength_ >= 645 && wavelength_ < 780 )
     {
         red = 1.0;
         green = 0.0;
         blue = 0.0;
     }
 
-    if ( wavelength_ > 380 && wavelength_ < 419 )
+    if ( wavelength_ > 380 && wavelength_ <= 420 )
         factor = 0.3 + 0.7*( wavelength - 380 ) / ( 420 - 380 );
-    else if ( wavelength_ > 420 && wavelength_ < 700 )
+    else if ( wavelength_ > 420 && wavelength_ <= 701 )
         factor = 1.0;
-    else if ( wavelength_ > 701 && wavelength_ < 780 )
+    else if ( wavelength_ > 701 && wavelength_ <= 780 )
         factor = 0.3 + 0.7*( 780 - wavelength ) / ( 780 - 700 );
     else
         factor = 0.0;
@@ -218,7 +211,8 @@ int SpectrumWidget::Adjust( double color, double factor )
     if ( color == 0.0 )
         return 0;
     else
-        return qRound( m_intensityMax * pow( color*factor, m_gamma ));
+//         return qRound( m_intensityMax * pow( color*factor, m_gamma )); FIXME
+        return m_intensityMax * color;
 }
 
 void SpectrumWidget::drawTickmarks( QPainter* p )
@@ -282,7 +276,7 @@ void SpectrumWidget::slotZoomOut()
     if ( m_startValue < 0.0 )
         m_startValue = 0.0;
 
-    if ( m_endValue > 10000.0 )
+    if ( m_endValue > 10000.0 ) // FIXME: Magic numbers....
         m_endValue = 40000.0;
 
     setBorders( m_startValue, m_endValue );
@@ -327,7 +321,7 @@ void SpectrumWidget::mousePressEvent(  QMouseEvent *e )
         m_LMBPointPress = e->pos();
     }
     if (  e->button() == Qt::RightButton ) {
-        restart();
+        resetSpectrum();
     }
 
     findPeakFromMouseposition( Wavelength( ( double )e->pos().x()/width() ) );
@@ -346,7 +340,7 @@ void SpectrumWidget::findPeakFromMouseposition( double wavelength )
     //find the highest intensity
     foreach( Spectrum::peak *currentPeak, m_spectrum->peaklist() )
     {
-        double currentWavelength = currentPeak->wavelengthToUnit( KUnitConversion::Nanometer );
+        double currentWavelength = currentPeak->wavelengthToUnit( Prefs::spectrumWavelengthUnit() );
 
         double thisdif = currentWavelength / wavelength;
 
@@ -390,12 +384,18 @@ void SpectrumWidget::mouseReleaseEvent(  QMouseEvent *e )
     m_LMBPointCurrent.setX( -1 );
 }
 
-void SpectrumWidget::restart()
+void SpectrumWidget::setSpectrum(Spectrum* spec)
+{
+    m_spectrum = spec;
+    resetSpectrum();
+}
+
+void SpectrumWidget::resetSpectrum()
 {
     //set the minimum and maximum peak to the min/max wavelength
     //plus/minus ten. This makes then always visible
-    double minimumPeak = m_spectrum->minPeak( KUnitConversion::Nanometer ) - 20.0;
-    double maximumPeak = m_spectrum->maxPeak( KUnitConversion::Nanometer ) + 20.0;
+    double minimumPeak = m_spectrum->minPeak( Prefs::spectrumWavelengthUnit() ) - 20.0;
+    double maximumPeak = m_spectrum->maxPeak( Prefs::spectrumWavelengthUnit() ) + 20.0;
 
     setBorders( minimumPeak, maximumPeak );
 }
